<resources>
    <string name="app_name">Photo Grid Art</string>
    <string name="foldername">/PhotoGridArt/</string>
    <string name="details">Details</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="canvas_text_color">Color</string>
    <string name="canvas_text_enter_text">Please enter text</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="effect_parameter_bundle_name">global_parameter</string>
    <string name="error_img_not_found">Oops! please try again.</string>
    <string name="gallery_no_more">No More item</string>
    <string name="gallery_select_an_album">Select Album</string>
    <string name="gallery_select_one">Select one</string>
    <string name="loading_image">Loading image</string>
    <string name="no_facebook_app">No Facebook app</string>
    <string name="preview_text">Preview Text</string>
    <string name="save_image_directory_error_message">image error</string>


    <string name="Admob_AppID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Admob_AppOpen">ca-app-pub-3940256099942544/3419835294</string>
    <string name="Admob_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Admob_Banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Admob_Native">ca-app-pub-3940256099942544/2247696110</string>
    <string name="privacy">https://gsbusinessenvanto.blogspot.com/2022/05/gs-business.html</string>
    <string name="start">Start</string>
    <string name="share">Share</string>
    <string name="create">Create</string>
    <string name="creation">Creation</string>
    <string name="collage">Collage</string>
    <string name="scrapbook">Scrapbook</string>
    <string name="square_pic">Square pic</string>
    <string name="camera">Camera</string>
    <string name="mirror">Mirror</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
